--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,22 +5,28 @@ build-backend = "hatchling.build"
 [project]
 name = "noncon"
 version = "0.0.1"
-description = "Wrapper for unsupervised one-class anomaly estimators implemented in PyOD for treshold-free, non-parametric and uncertainty-quantified anomaly detection."
+description = "Conformal anomaly detection with 'PyOD' detectors."
 authors = [
   { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
 ]
 license = { file = "LICENSE" }
 readme = "README.md"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.12",
+    "License :: OSI Approved :: BSD License",
     "Operating System :: OS Independent",
 ]
 requires-python = ">=3.12"
 dependencies = [
-  "requests>2",
+    "numpy ~=1.26.4",
+    "pandas ~=2.2.1",
+    "pyod ~=1.1.3",
+    "scipy ~=1.13.0",
+    "tensorflow ~=2.16.1",
+    "torch ~=2.2.2",
+    "tqdm ~=4.66.2"
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+"Homepage" = "https://github.com/OliverHennhoefer/noncon"
+"Bugs" = "https://github.com/OliverHennhoefer/noncon/issues"
