--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "scipy ~=1.13.0",
     "tensorflow ~=2.16.1",
     "torch ~=2.2.2",
-    "tqdm ~=4.66.2"
+    "tqdm ~=4.66.2",
+    "suod ~=0.1.3"
 ]
 
 [project.urls]
