--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "unquad"
-version = "0.0.7"
+version = "0.0.8"
 description = "Conformal anomaly detection for 'PyOD'-detectors."
 authors = [
   { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
@@ -25,7 +25,8 @@ dependencies = [
     "tensorflow ~=2.16.1",
     "torch ~=2.2.2",
     "tqdm ~=4.66.2",
-    "suod ~=0.1.3"
+    "suod ~=0.1.3",
+    "pyarrow ~= 16.1.0"
 ]
 
 [project.urls]
