--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "unquad"
-version = "0.1.2"
+version = "0.1.4"
 description = "Conformal Anomaly Detection"
 authors = [
   { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
@@ -18,18 +18,18 @@ classifiers = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "numpy ~=1.26.0",
-    "pandas ~=2.2.1",
-    "pyod ~=1.1.3",
-    "scipy ~=1.13.0",
-    "tqdm ~=4.66.2",
+    "numpy >=1.26.0",
+    "pandas >=2.2.1",
+    "pyod ~=2.0.3",
+    "scipy >=1.13.0",
+    "tqdm >=4.66.2",
 ]
 
 [project.optional-dependencies]
 dev = ["black", "flake8"]
-dl = ["tensorflow ~=2.16.1", "torch ~=2.2.2"]
-data = ["pyarrow ~= 16.1.0"]
-all = ["black", "flake8", "tensorflow ~=2.16.1", "torch ~=2.2.2", "pyarrow ~= 16.1.0"]
+dl = ["tensorflow >=2.16.1", "torch >=2.2.2"]
+data = ["pyarrow >= 16.1.0"]
+all = ["black", "flake8", "tensorflow >=2.16.1", "torch >=2.2.2", "pyarrow >= 16.1.0"]
 
 [project.urls]
 "Homepage" = "https://github.com/OliverHennhoefer/unquad"
