--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ requires-python = ">=3.12"
 dependencies = [
     "numpy~=1.26.0",
     "pandas>=2.2.1",
+    "scikit-learn>=1.6.1",
     "pyod~=2.0.3",
     "scipy>=1.13.0",
     "tqdm>=4.66.2",
