--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# required
 numpy~=1.26.0
 pandas>=2.2.1
 scikit-learn>=1.6.1
@@ -6,7 +5,8 @@ pyod~=2.0.3
 scipy>=1.13.0
 tqdm>=4.66.2
 pyarrow>=16.1.0
-
-# deep learning
 tensorflow>=2.16.1
 torch>=2.2.2
+black
+ruff
+pre-commit
