--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ pyarrow>=16.1.0
 tensorflow>=2.16.1
 torch>=2.2.2
 
+# Advanced FDR control dependencies (unquad[fdr])
+online-fdr>=0.0.3
+
 # Development dependencies (unquad[dev])
 black
 ruff
